--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ bcg:
   product: BirthdayCalendarGenerator
   calendar-category: Birthday
   run-on-start: true
-  cron: "0 30 4 * * SUN"
+  cron: "0 30 4 * * *"
 
 event:
   summary: "🎂 ~first-name~ ~last-name~"
