fix #9 docs(README, config): clarify `run-on-start` default behavior and update parameter descriptions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 bcg:
   product: BirthdayCalendarGenerator
   calendar-category: Birthday
-  run-on-start: true
+  run-on-start: false
   cron: "0 30 4 * * *"
 
 event:
