--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>codes.thischwa</groupId>
     <artifactId>bcg</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
 
     <name>Birthday Calendar Generator</name>
 
@@ -23,7 +23,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:th-schwarz/BirthdayCalendarGenerator</developerConnection>
         <connection>scm:git:git@github.com:th-schwarz/BirthdayCalendarGenerator</connection>
-        <tag>v2.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
