--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -2,7 +2,7 @@ name: Build and Push to GHCR
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "docker"]
   workflow_dispatch:
 
 jobs:
