test: rename SogoTest to ITSogoTest and enhance it-test profile configuration
- Renamed `SogoTest` to `ITSogoTest` for better integration test naming.
- Updated Maven `surefire` plugin with `it-test` profile and added test-specific configuration.
- Adjusted GitHub Actions workflow to use `mvn clean test -P it-test`.

--- a/.github/workflows/start-integration-tests.yml
+++ b/.github/workflows/start-integration-tests.yml
@@ -24,7 +24,7 @@ jobs:
         restore-keys: maven
         
     - name: Run Integration Tests
-      run: mvn test -Dspring.profiles.active=it-test
+      run: mvn clean test -P it-test
       env:
         SOGO_DAV_USER: ${{ secrets.SOGO_DAV_USER }}
         SOGO_DAV_PASS: ${{ secrets.SOGO_DAV_PASS }}
