--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
                 <spring.profiles.active>it-test</spring.profiles.active>
               </systemPropertyVariables>
               <includes>
-                <include>**/*IT*.java</include>
+                <include>**/it/*.java</include>
               </includes>
             </configuration>
           </plugin>
