--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <ical4j.version>4.1.1</ical4j.version>
         <ical4j-vcard.version>2.0.1</ical4j-vcard.version>
         <sardine.version>5.13</sardine.version>
+        <testcontainers.version>1.21.3</testcontainers.version>
 
         <!-- checkstyle -->
         <checkstyle.version>10.8.1</checkstyle.version>
@@ -111,13 +112,13 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>1.20.4</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.20.4</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
