--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.6</version>
-        <relativePath/> <!-- lookup parent -->
+        <relativePath /> <!-- lookup parent -->
     </parent>
     <packaging>jar</packaging>
 
     <groupId>codes.thischwa</groupId>
     <artifactId>bcg</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>3.0.0</version>
 
     <name>Birthday Calendar Generator</name>
 
@@ -24,7 +23,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:th-schwarz/BirthdayCalendarGenerator</developerConnection>
         <connection>scm:git:git@github.com:th-schwarz/BirthdayCalendarGenerator</connection>
-        <tag>HEAD</tag>
+        <tag>v3.0.0</tag>
     </scm>
 
     <properties>
