--- a/.github/workflows/start-backend-tests.yml
+++ b/.github/workflows/start-backend-tests.yml
@@ -6,27 +6,38 @@ on:
 jobs:
   backend-test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'corretto'
-        
-    - name: Cache maven repository
-      uses: actions/cache@v4.2.0
-      with:
-        path: ~/.m2/repository
-        key: maven
-        restore-keys: maven
-        
-    - name: Run Integration Tests
-      run: mvn clean verify
-      env:
-        SOGO_DAV_USER: ${{ secrets.SOGO_DAV_USER }}
-        SOGO_DAV_PASS: ${{ secrets.SOGO_DAV_PASS }}
-        SOGO_DAV_CARD_URL: ${{ secrets.SOGO_DAV_CARD_URL }}
-        SOGO_DAV_CAL_URL: ${{ secrets.SOGO_DAV_CAL_URL }}
+      - name: Set up Docker
+        uses: docker/setup-docker-action@v4
+        with:
+          daemon-config: |
+            {
+              "debug": true,
+              "features": {
+                "containerd-snapshotter": true
+              }
+            }
+
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'corretto'
+
+      - name: Cache maven repository
+        uses: actions/cache@v4.2.0
+        with:
+          path: ~/.m2/repository
+          key: maven
+          restore-keys: maven
+
+      - name: Run Backend Tests
+        run: mvn clean verify
+        env:
+          SOGO_DAV_USER: ${{ secrets.SOGO_DAV_USER }}
+          SOGO_DAV_PASS: ${{ secrets.SOGO_DAV_PASS }}
+          SOGO_DAV_CARD_URL: ${{ secrets.SOGO_DAV_CARD_URL }}
+          SOGO_DAV_CAL_URL: ${{ secrets.SOGO_DAV_CAL_URL }}
