--- a/.github/workflows/backend-baikal.yml
+++ b/.github/workflows/backend-baikal.yml
@@ -11,7 +11,8 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -20,7 +21,7 @@ jobs:
         run: docker version
 
       - name: Pull Baikal Docker image
-        run: docker pull thschwarz/baikal-it:1.0
+        run: docker pull ckulka/baikal:latest
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -37,7 +38,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Run Baikal Docker Tests
-        run: mvn clean test -B -Dtest=BaikalDockerTest
+        run: mvn clean test -B -Dtest=BaikalComposeTest
         env:
           TESTCONTAINERS_RYUK_DISABLED: true
           TESTCONTAINERS_LOG_LEVEL: DEBUG
