--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Verify Docker works
         run: docker version
 
+      - name: Pull required Docker images
+        run: docker pull thschwarz/baikal-it:1.0
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
