--- a/.github/workflows/backend-radicale.yml
+++ b/.github/workflows/backend-radicale.yml
@@ -20,7 +20,7 @@ jobs:
         run: docker version
 
       - name: Pull Radicale Docker image
-        run: docker pull thschwarz/radicale-it:1.0
+        run: docker pull  ghcr.io/kozea/radicale:latest
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -37,7 +37,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Run Radicale Docker Tests
-        run: mvn clean test -B -Dtest=RadicaleDockerTest
+        run: mvn clean test -B -Dtest=RadicaleComposeTest
         env:
           TESTCONTAINERS_RYUK_DISABLED: true
           TESTCONTAINERS_LOG_LEVEL: DEBUG
