Update Radicale test and workflow configurations
- Enhance `RadicaleComposeTest`: allow local Compose, pull images, and adjust HTTP status handling logic.
- Extend startup timeout to 180 seconds for improved reliability.
- Add Docker Compose version check in workflow.
- Re-enable Ryuk for container lifecycle management in CI.

--- a/.github/workflows/backend-radicale.yml
+++ b/.github/workflows/backend-radicale.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Verify Docker works
         run: docker version
 
+      - name: Verify Docker Compose works
+        run: docker compose version
+
       - name: Pull Radicale Docker image
         run: docker pull  ghcr.io/kozea/radicale:latest
 
@@ -39,5 +42,6 @@ jobs:
       - name: Run Radicale Docker Tests
         run: mvn clean test -B -Dtest=RadicaleComposeTest
         env:
-          TESTCONTAINERS_RYUK_DISABLED: true
+          # Allow Ryuk to manage container lifecycle in CI for reliability
+          TESTCONTAINERS_RYUK_DISABLED: "false"
           TESTCONTAINERS_LOG_LEVEL: DEBUG
