--- a/.github/workflows/backend-sogo.yml
+++ b/.github/workflows/backend-sogo.yml
@@ -2,6 +2,7 @@ name: Run Backend SOGo Tests
 
 on:
   workflow_dispatch:
+
 jobs:
   sogo-tests:
     runs-on: ubuntu-latest
@@ -10,7 +11,8 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
