--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,11 +23,12 @@ jobs:
       with:
         java-version: '17'
         distribution: 'corretto'  
-    - name: Cache maven repository
-      uses: actions/cache@v4.2.0
+    - name: Cache Maven repository
+      uses: actions/cache@v4
       with:
         path: ~/.m2/repository
-        key: maven
-        restore-keys: maven
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
     - name: Build with Maven
       run: mvn -B package --file pom.xml
