Introduce reusable action for Java and Maven setup in CI workflows
- Replace repetitive Java (JDK 17) and Maven configurations with a reusable composite action.
- Update Baikal, Radicale, SOGo, and general Maven workflows to use the new `.github/actions/setup-java-maven` action for streamlined and consistent setup.

--- a/.github/workflows/backend-baikal.yml
+++ b/.github/workflows/backend-baikal.yml
@@ -14,19 +14,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'corretto'
-
-      - name: Cache Maven repository
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+      - name: Setup Java and Maven
+        uses: ./.github/actions/setup-java-maven
 
       - name: Run Baikal Docker Tests
         run: mvn clean test -B -Dtest=BaikalComposeTest
