--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,25 +10,17 @@ on:
       - feature*
   pull_request:
     types: [ opened, synchronize, reopened ]
-    
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'corretto'  
-    - name: Cache Maven repository
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Java and Maven
+        uses: ./.github/actions/setup-java-maven
+
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
